# voxel-game

./: CMakeLists.txt  TODO.md  renderdoc_settings.cap
assets/shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: camera.cpp  camera.h  keyboard.h  mouse.h  profiler.cpp  profiler.h  shader.cpp  shader.h  texture.cpp  texture.h
src/world/: chunk.cpp  chunk.h  cube.h  sky.cpp  sky.h  texture_atlas.cpp  texture_atlas.h  tile.h  world.cpp  world.h
